--- a/app/components/app.css
+++ b/app/components/app.css
@@ -1,4 +1,12 @@
-.box{
+.app{
   height: 100%;
   width: 100%;
+}
+.logo{
+  width:150px;
+}
+@media screen and (max-width: 600px) {
+  .logo {
+      margin-top: 4px;;
+  }
 }
